--- a/projects/ngx-interactive-paycard-demo/src/app/app.component.html
+++ b/projects/ngx-interactive-paycard-demo/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="wrapper">
   <ngx-interactive-paycard
-    [chipImgPath]="'./assets/card_chip_gold.png'"
-    [logoImgPath]="'./assets/logo2.png'"
-    [frontBgImgPath]="'./assets/bg.jpg'"
-    [backBgImgPath]="'./assets/back.png'"
+    [chipImgPath]="'./assets/img1.png'"
+    [logoImgPath]="'./assets/img2.png'"
+    [frontBgImgPath]="'./assets/img3.jpg'"
+    [backBgImgPath]="'./assets/img4.png'"
     [cardNumberFormat]="cardNumberFormat"
     [cardNumberMask]="cardNumberMask"
     (submitEvent)="onSubmitEvent($event)">
